# qsp-hpc-tools

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  logs_show.py  mypy.ini  mypy_errors.txt  pyproject.toml  pytest.ini  requirements_hpc.txt  setup_credentials.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  CPP_SIMULATION_PLAN.md  DEVELOPMENT.md  EVOLVE_TRAJECTORIES.md  GETTING_STARTED.md  MATLAB_MODEL_REQUIREMENTS.md  SIMFUNCTION_DEPLOYMENT_DESIGN.md  SIMULATE_WITH_PARAMETERS.md  SLURM_Integration_Guide.md  TEST_STATISTICS_CSV_FORMAT.md
examples/: build_offline_fixture.py  feature_walkthrough.ipynb
examples/data/: priors.csv
examples/fixtures/: qsp_sim_stub  template_param.xml
examples/scenarios/: control.yaml  treatment.yaml
hpc-setup/: setup_hpc_venv.sh
matlab/: batch_worker.m  extract_all_species_arrays.m  save_species_to_parquet.m
paper/: paper.bib  paper.md
qsp_hpc/: __init__.py  cli.py  constants.py
qsp_hpc/batch/: __init__.py  batch_utils.py  combine_test_stats_chunks.py  cpp_batch_worker.py  cpp_combine_batch_worker.py  cross_scenario_derive.py  cross_scenario_worker.py  derive_test_stats_worker.py  derive_trajectory_grid_worker.py  hpc_file_transfer.py  hpc_job_manager.py  logs_show.py  result_collector.py  slurm_job_submitter.py  test_stats_compute.py  update_manifest.py
qsp_hpc/calibration/: __init__.py  cross_scenario_loader.py  yaml_loader.py
qsp_hpc/cpp/: __init__.py  batch_runner.py  concat_chunks.py  evolve_cache.py  evolve_pack.py  evolve_trajectory.py  param_xml.py  qsth.py  runner.py  sshfs_reader.py
qsp_hpc/matlab/: __init__.py  batch_worker.m  extract_all_species_arrays.m  load_parameter_samples_csv.m  local_worker.m  postproc_extract_test_statistics.m  postproc_save_outputs.m  save_species_to_parquet.m
qsp_hpc/simulation/: __init__.py  batch_runner.py  cpp_simulator.py  fetch_combined.py  hpc_session.py  local_matlab_runner.py  multi_scenario_runner.py  qsp_simulator.py  result_loader.py  run_scenario.py  scan_existing.py  simulation_batch.py  simulation_pool.py  theta_pool.py  write_species_parquet.py
qsp_hpc/utils/: __init__.py  hash_utils.py  hpc_guard.py  logging_config.py  model_structure_units.py  security.py  unit_registry.py
scripts/: bench_cpp_chunking.py  bench_cpp_scenarios.py  smoke_sbi_hpc.py  smoke_test_evolve_cache_hpc.py  submit_cpp_smoke_sweep.py  timing_test.py  validate_cpp_vs_matlab.py
scripts/hpc/: README.md  build_qsp_sim.sh  setup_hpc_venv.sh
scripts/poc/: build_deployed.m  (+4 more)
tests/: __init__.py  conftest.py  test_batch_utils.py  test_cli.py  test_combine_test_stats_chunks.py  test_cpp_batch_runner.py  test_cpp_batch_worker.py  test_cpp_combine_batch_worker.py  test_cpp_evolve_cache.py  test_cpp_hpc.py  test_cpp_param_xml.py  test_cpp_runner.py  test_cpp_simulator.py  test_cpp_simulator_remote_paths.py  test_cpp_vs_matlab_validation.py  test_cross_scenario_derive.py  test_cross_scenario_loader.py  test_cross_scenario_worker.py  test_derive_test_stats_worker.py  test_evolve_pack.py  test_evolve_trajectory.py  test_hash_utils.py  test_hpc_file_transfer.py  test_hpc_guard.py  test_hpc_job_manager.py  test_hpc_session.py  test_inline_derive.py  test_logging_config.py  test_matlab.py  test_model_structure_units.py  test_multi_scenario_runner.py  test_qsp_simulator.py  test_qsth.py  test_result_collector.py  test_result_loader.py  test_security.py  test_selective_derivation.py  test_simulation_batch.py  test_simulation_pool.py  test_slurm_job_submitter.py  (+5 more)
(+21 files in other folders)
