[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-hpc-tools"
version = "0.1.0"
description = "HPC tools for running QSP simulations with intelligent caching and pooling"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Joel Eliason", email = "jeliason@example.com"}
]
keywords = ["qsp", "pharmacology", "hpc", "simulation", "slurm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "pyyaml>=5.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "ruff>=0.0.270",
]

[project.urls]
Homepage = "https://github.com/jeliason/qsp-hpc-tools"
Repository = "https://github.com/jeliason/qsp-hpc-tools"
Issues = "https://github.com/jeliason/qsp-hpc-tools/issues"

[tool.setuptools]
packages = ["qsp_hpc", "qsp_hpc.simulation", "qsp_hpc.batch", "qsp_hpc.utils"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by black)
