[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsp-hpc-tools"
version = "0.1.0"
description = "HPC tools for running QSP simulations with intelligent caching and pooling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Joel Eliason", email = "joel.eliason119@gmail.com"}
]
keywords = ["qsp", "pharmacology", "hpc", "simulation", "slurm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "pyarrow>=12.0",  # For Parquet format on HPC
    "pyyaml>=5.4",
    "click>=8.0",
    "pint>=0.25",  # For unit-aware test statistic calculations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black~=25.11",
    "ruff>=0.0.270",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/jeliason/qsp-hpc-tools"
Repository = "https://github.com/jeliason/qsp-hpc-tools"
Issues = "https://github.com/jeliason/qsp-hpc-tools/issues"

[project.scripts]
qsp-hpc = "qsp_hpc.cli:cli"

[tool.setuptools]
packages = ["qsp_hpc", "qsp_hpc.simulation", "qsp_hpc.batch", "qsp_hpc.utils", "qsp_hpc.matlab", "qsp_hpc.calibration"]
include-package-data = true

[tool.setuptools.package-data]
"qsp_hpc.matlab" = ["*.m"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # Line too long (handled by black)
